syntax = "proto3";
package pudding.broker.v1;
option go_package = "github.com/beihai0xff/pudding/api/gen/pudding/broker/v1;broker";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

// The Pudding service definition.
service SchedulerService {
  // Sends a Delay Message
  rpc SendDelayMessage (SendDelayMessageRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/pudding/broker/v1/sendDelayMessage"
      body: "*"
    };
  }

}

// The SendDelayMessage request message.
message SendDelayMessageRequest {
  // Message Topic
  string topic = 1;
  // Message Key
  string key = 2;
  // Message Payload
  bytes payload  = 3;
  // Message Delay Time (Seconds)
  int64 deliver_after = 4;
  // Message Ready Time（now + delay, Unix Timestamp, Seconds）
  int64 deliver_at  = 5;
}